# drone_transmitter

./: .gitignore  CMakeLists.txt  README.md  data_communication.c  data_communication.h  data_telemetry.c  data_telemetry.h  data_video.c  data_video.h  drone_transmitter.sln  lin_tcpip.c  lin_tcpip.h  main.c  thread_capture.c  thread_capture.h  thread_serial.c  thread_serial.h  thread_tcp_tele.c  thread_tcp_tele.h  thread_tcp_vid.c  thread_tcp_vid.h  thread_vid_stream.c  thread_vid_stream.h  timer.c  timer.h
!old_files_drone_transmitter/: main.cpp
!old_files_drone_transmitter/data/: data_commands.h  data_video.h
!old_files_drone_transmitter/error/: error.cpp
!old_files_drone_transmitter/tcp_socket/: linux_tcpip.h
!old_files_drone_transmitter/thread_capture/: thread_capture.cpp
!old_files_drone_transmitter/thread_serial/: thread_serial.h
!old_files_drone_transmitter/thread_tcp1/: thread_tcp1.cpp  thread_tcp1.h
!old_files_drone_transmitter/timer/: timer.cpp  timer.h
drone_transmitter/: drone_transmitter.vcxproj  drone_transmitter.vcxproj.filters  globals.h  main.cpp
drone_transmitter/data/: data_commands.h  data_telemetry.h  data_video.h
drone_transmitter/error/: error.h
drone_transmitter/tcp_socket/: linux_tcpip.cpp
drone_transmitter/thread_capture/: thread_capture.h
drone_transmitter/thread_serial/: thread_serial.cpp  thread_serial.h
drone_transmitter/thread_tcp1/: thread_tcp1.cpp  thread_tcp1.h
drone_transmitter/thread_tcp2/: thread_tcp2.cpp  thread_tcp2.h
video_streamer/: video_stream.py
